@@ -26,9 +26,9 @@ program char4_iunit_1
   write(string, *) 1.2345e-06, 4.2846e+10_8
   if (string .ne. 4_"  1.23450002E-06   42846000000.000000     ") call abort
   write(string, *) nan, inf
-  if (string .ne. 4_"             NaN       +Infinity           ") call abort
+  if (string .ne. 4_"             NaN        Infinity          ") call abort
   write(string, '(10x,f3.1,3x,f9.1)') nan, inf
-  if (string .ne. 4_"          NaN   +Infinity                 ") call abort
+  if (string .ne. 4_"          NaN    Infinity                 ") call abort
   write(string, *) (1.2, 3.4 )
   if (string .ne. 4_" (  1.2000000    ,  3.4000001    )        ") call abort
 end program char4_iunit_1
