@@ -1,4 +1,5 @@
 !pr 12839- F2003 formatting of Inf /Nan 
+! Modified for PR47434
        implicit none
        character*40 l
        character*12 fmt
@@ -15,11 +16,11 @@
 ! check a field width = 0
        fmt = '(F0.0)'
        write(l,fmt=fmt)pos_inf
-       if (l.ne.'+Inf') call abort
+       if (l.ne.'Inf') call abort
        write(l,fmt=fmt)neg_inf
        if (l.ne.'-Inf') call abort
        write(l,fmt=fmt)nan
-       if (l.ne.' NaN') call abort
+       if (l.ne.'NaN') call abort
 
 ! check a field width < 3
        fmt = '(F2.0)'
@@ -42,7 +43,7 @@
 ! check a field width > 3
        fmt = '(F4.0)'
        write(l,fmt=fmt)pos_inf
-       if (l.ne.'+Inf') call abort
+       if (l.ne.' Inf') call abort
        write(l,fmt=fmt)neg_inf
        if (l.ne.'-Inf') call abort
        write(l,fmt=fmt)nan
@@ -51,7 +52,7 @@
 ! check a field width = 7
        fmt = '(F7.0)'
        write(l,fmt=fmt)pos_inf
-       if (l.ne.'   +Inf') call abort
+       if (l.ne.'    Inf') call abort
        write(l,fmt=fmt)neg_inf
        if (l.ne.'   -Inf') call abort
        write(l,fmt=fmt)nan
@@ -60,7 +61,7 @@
 ! check a field width = 8
        fmt = '(F8.0)'
        write(l,fmt=fmt)pos_inf
-       if (l.ne.'    +Inf') call abort
+       if (l.ne.'Infinity') call abort
        write(l,fmt=fmt)neg_inf
        if (l.ne.'    -Inf') call abort
        write(l,fmt=fmt)nan
@@ -69,7 +70,7 @@
 ! check a field width = 9
        fmt = '(F9.0)'
        write(l,fmt=fmt)pos_inf
-       if (l.ne.'+Infinity') call abort
+       if (l.ne.' Infinity') call abort
        write(l,fmt=fmt)neg_inf
        if (l.ne.'-Infinity') call abort
        write(l,fmt=fmt)nan
@@ -78,7 +79,7 @@
 ! check a field width = 14
        fmt = '(F14.0)'
        write(l,fmt=fmt)pos_inf
-       if (l.ne.'     +Infinity') call abort
+       if (l.ne.'      Infinity') call abort
        write(l,fmt=fmt)neg_inf
        if (l.ne.'     -Infinity') call abort
        write(l,fmt=fmt)nan
